Added getMostRecentProduct api , updated the swagger json
