# api-services/routes/product.js
@@ -101,9 +101,25 @@ router.post('/add', function (req, res, next) {
   })
 });
 
+
+//limit:12
 router.get("/userproduct/:userid", function(req,res, next){
   var user_id = req.params.userid;
   Product.getAllUserProduct(user_id, (rows) => {
+    if (!rows) {
+      res.json({
+        "status": "failed",
+        "user": null
+      })
+    } else {
+      res.json({ products: rows });
+    }
+  });
+})
+
+router.get("/recentproduct/:userid", function(req,res, next){
+  var user_id = req.params.userid;
+  Product.getMostRecentUserProduct(user_id, (rows) => {
     if (!rows) {
       res.json({
         "status": "failed",
